tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.diagnostic
diagnostic error code=M0001 family=module source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.ari" line=1 column=5 byte_start=4 byte_end=27 message="cannot find module file for 'missing_artifact_module'; searched tests/cases/compiler-development/artifact/errors/missing_artifact_module.ari, tests/cases/compiler-development/artifact/errors/missing_artifact_module.arih, tests/cases/compiler-development/artifact/errors/missing_artifact_module/mod.ari, tests/cases/compiler-development/artifact/errors/missing_artifact_module/mod.arih" snippet="  --> tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.ari:1:5\n   |\n 1 | mod missing_artifact_module;\n   |     ^^^^^^^^^^^^^^^^^^^^^^^"
